# qarium

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
.qarium/ai/employees/: devops.md  lead.md
